﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version 2.5.0 (v2.5 RTM) 2014-03-02

	General description:
		The most prominent new feature is the addition of async/await support. This is supported by the
		addition of a new ExecutionContextScoping package and the ExecutionContextScopeLifestyle. On top of 
		this is the new Web API integration package that allows registering instances with a 
		WebApiRequestLifestyle for both IIS-hosted and self-hosted Web API projects.

		Besides these, there are lots of small improvements and bug fixes in the core library, such as the
		ability to register a factory-factory delegate using the RegisterDecorator overloads, which allows
		creating new decorator types based on contextual information.


	New features:
		-[ExecutionContextScoping] New SimpleInjector.Extensions.ExecutionContextScoping project has been
		 added that allows defining a scope that flows through asynchronous operations. (work item 20738)
		-[WebApi] New SimpleInjector.Integration.WebApi project has been added that adds support for Web API.
		 (work item 20082)

	Improvements:
		-[Core] New RegisterDecorator overload added that allows supplying a factory delegate for creating
		 decorator types. (work item 20550)
		-[LifetimeScoping/Wcf] Removed the need to explicitly call EnableLifetimeScoping /
		 EnablePerWcfOperationLifestyle when no lifetime scoped instances are registered.
		-[Core] Design of the ScopedLifestyle class improved to make it easier to create custom lifestyles.
		-[Core/LifestyleScoping/Web/Wcf] Performance improvements for ScopeLifestyle derivatives. Resolving 
		 the scope is now done once per compiled delegate and resolving an scoped instance from that scope is 
		 also done just once per compiled delegate. (work item 20641)
		-[Core] A call to verify will now ensure deterministic disposal of the scoped instances that are
		 created during verification. (work item 20773)

	Bug fixes: