@@ -25,6 +25,7 @@ namespace SimpleInjector.Integration.Wcf
     using System;
     using System.Diagnostics.CodeAnalysis;
     using System.Globalization;
+    using System.ServiceModel;
     using System.Threading;
 
     /// <summary>
@@ -35,58 +36,5 @@ namespace SimpleInjector.Integration.Wcf
     /// </summary>
     public sealed class WcfOperationScope : Scope
     {
-        private readonly int initialThreadId;
-        private WcfOperationScopeManager manager;
-
-        internal WcfOperationScope(WcfOperationScopeManager manager)
-        {
-            this.manager = manager;
-            this.initialThreadId = Thread.CurrentThread.ManagedThreadId;
-        }
-
-        /// <summary>
-        /// Performs application-defined tasks associated with freeing, releasing, or resetting unmanaged 
-        /// resources.
-        /// </summary>
-        /// <param name="disposing">True to release both managed and unmanaged resources; false to release 
-        /// only unmanaged resources.</param>
-        [SuppressMessage("Microsoft.Design", "CA1065:DoNotRaiseExceptionsInUnexpectedLocations",
-            Justification = "This is the only reliable place where we can see that the scope has been " +
-                            "used over multiple threads is here.")]
-        protected override void Dispose(bool disposing)
-        {
-            if (disposing && this.manager != null)
-            {
-                if (this.initialThreadId != Thread.CurrentThread.ManagedThreadId)
-                {
-                    throw new InvalidOperationException(string.Format(CultureInfo.InvariantCulture,
-                        "It is not safe to use a WCF operation scope across threads. Make sure the " +
-                        "complete operation that the scope surrounds gets executed within the " +
-                        "same thread and make sure that the WCF operation scope instance gets disposed on the " +
-                        "same thread as it gets created. Dispose was called on thread with ManagedThreadId " +
-                        "{0}, but was created on thread with id {1}.", Thread.CurrentThread.ManagedThreadId,
-                        this.initialThreadId));
-                }
-
-                bool outerScopeEnded = false;
-
-                try
-                {
-                    // EndLifetimeScope should not be called from a different thread than where it was started.
-                    // Calling this method from another thread could remove the wrong scope.
-                    outerScopeEnded = this.manager.EndLifetimeScope();
-                }
-                finally
-                {
-                    // Prevent disposing all instances when we ended an inner scope.
-                    if (outerScopeEnded)
-                    {
-                        this.manager = null;
-
-                        base.Dispose(true);
-                    }
-                }
-            }
-        }
     }
 }
